math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sout.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\sout{abc}"
---
[
  Enclose(
    content: Row(
      nodes: [
        IdentifierChar('a', Default, false),
        IdentifierChar('b', Default, false),
        IdentifierChar('c', Default, false),
      ],
      attr: None,
    ),
    notation: Notation("HORIZONTAL"),
  ),
]
