math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sqrt_degree_and_number.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\sqrt[3]21"
---
[
  Root(Number("3"), Number("2")),
  Number("1"),
]
