math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sqrt_number_with_dot.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\sqrt{4.}"
---
[
  Sqrt(Row(
    nodes: [
      Number("4"),
      IdentifierChar('.', Default, false),
    ],
    attr: None,
  )),
]
