math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sqrt_subscript.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\sqrt x_i"
---
[
  Subscript(
    target: Sqrt(IdentifierChar('x', Default, false)),
    symbol: IdentifierChar('i', Default, false),
  ),
]
