math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sqrt_subscript_and_degree.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\sqrt[3] x_i"
---
[
  Subscript(
    target: Root(Number("3"), IdentifierChar('x', Default, false)),
    symbol: IdentifierChar('i', Default, false),
  ),
]
