math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sub_big_paren.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "x_\\big("
---
[
  Subscript(
    target: IdentifierChar('x', Default),
    symbol: SizedParen(Scale1, StretchableOp('(', Always)),
  ),
]
