math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sub_number.snap
---
source: math-core/src/latex_parser/parse.rs
expression: x_123
---
[
  Subscript(
    target: IdentifierChar('x', Default, false),
    symbol: Number("1"),
  ),
  Number("23"),
]
