math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__sum_relation.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "{\\sum = 4}"
---
[
  Row(
    nodes: [
      Operator(
        op: '∑',
        attr: None,
        left: Some(Zero),
        right: Some(Zero),
      ),
      Operator(
        op: '=',
        attr: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attr: None,
  ),
]
