math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__text_number.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\text123"
---
[
  Text(None, "1"),
  Number("23"),
]
