math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__textbf.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\textbf{abc}"
---
[
  Text(Some(Bold), "abc"),
]
